snappy: copy long literals through the incubating Vector API
An experiment with jdk.incubator.vector (JDK 25) in the Java ports:

- Vectorizing match copies in the lz4 decompressor is a large loss (wide
  loads over bytes the previous sequence has just stored stall).
- Vectorizing literal copies helps lz4 on some files and costs 10-15% on
  highly compressible ones; it is within noise for zstd.
- Vectorizing match-length counting and literal emission in the lz4 and
  snappy compressors is 5-12% slower on every file.
- Vectorizing literal copies in the snappy decompressor is the only net
  win, and only on long literal runs: JMH (3 forks) dickens +6%, x-ray
  +28%, mozilla/xml within noise, html -7%.

This commit keeps that last variant behind a runtime guard: VectorSupport
detects the module (it is optional; without --add-modules
jdk.incubator.vector the scalar path is used) and honours the
io.airlift.compress.v3.disable-vector property, and VectorCopy is the only
class that references the incubator API. The build adds the module to the
compiler and test JVM arguments.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NmMNTV5245iTX8ZViYMc9z